# BookStore

./: .gitignore
Backend/app/: .env
Backend/app/alembic/versions/: 2024_02_11_1949-5b4942b7ab5d_table_init.py
Backend/app/api/v1/endpoints/: address.py
Backend/app/core/: security.py
Backend/app/curd/: address_curd.py
Backend/app/db/: __init__.py
Backend/app/models/: book_model.py
BookStore/Backend/app/: main.py  pyproject.toml
BookStore/Backend/app/alembic/: env.py
BookStore/Backend/app/api/v1/: api.py
BookStore/Backend/app/api/v1/endpoints/: authors.py  books.py  login.py  users.py
BookStore/Backend/app/core/: settings.py
BookStore/Backend/app/curd/: books_curd.py  user_curd.py
BookStore/Backend/app/models/: __init__.py  address_model.py  author_book_model.py  author_model.py  base_uuid_model.py  genre_model.py  user_model.py
BookStore/frontend/src/app/: globals.css
